--- a/index.html
+++ b/index.html
@@ -21,38 +21,38 @@
         </div>
       </header>
         <div class="innershell clearfix">
+          <h2>Portfolio</h2>
           <ul class="nav2">
-            <h2>Portfolio</h2>
-              <li>
-                <img src="img/portfolio-1.png">
-                  <h2>Marketing Page</h2>
-                  <p>This project shows the front page of a marketing website meant for a specific business I'm interested in.</p>
-              </li>
-              <li>
-                <img src="img/portfolio-2.png">
-                  <h2>Search Page</h2>
-                  <p>This project searches through a specific database to find information that the user is trying to look up.</p>
-              </li>
-              <li>
-                <img src="img/portfolio-3.png">
-                  <h2>Travel App</h2>
-                  <p>This project compares travel times based on different transportation methods and tells you the best one.</p>
-              </li>
-              <li>
-                <img src="img/portfolio-6.png">
-                  <h2>Map of Favorite Spots</h2>
-                  <p>This project uses mapping apis to plot points for my favorite spots in the city for a do-it-yourself walking tour.</p>
-              </li>
-              <li>
-                <img src="img/portfolio-5.png">
-                  <h2>Photo Gallery</h2>
-                  <p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
-              </li>
-              <li>
-                <img src="img/portfolio-4.png">
-                  <h2>Calculator</h2>
-                  <p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
-              </li>
+            <li>
+              <img src="img/portfolio-1.png" alt="marketing">
+                <h2>Marketing Page</h2>
+                <p>This project shows the front page of a marketing website meant for a specific business I'm interested in.</p>
+            </li>
+            <li>
+              <img src="img/portfolio-2.png" alt="search">
+                <h2>Search Page</h2>
+                <p>This project searches through a specific database to find information that the user is trying to look up.</p>
+            </li>
+            <li>
+              <img src="img/portfolio-3.png" alt="travel">
+                <h2>Travel App</h2>
+                <p>This project compares travel times based on different transportation methods and tells you the best one.</p>
+            </li>
+            <li>
+              <img src="img/portfolio-6.png" alt="map">
+                <h2>Map of Favorite Spots</h2>
+                <p>This project uses mapping apis to plot points for my favorite spots in the city for a do-it-yourself walking tour.</p>
+            </li>
+            <li>
+              <img src="img/portfolio-5.png" alt="photo">
+                <h2>Photo Gallery</h2>
+                <p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
+            </li>
+            <li>
+              <img src="img/portfolio-4.png" alt="calculator">
+                <h2>Calculator</h2>
+                <p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
+            </li>
           </ul>
         </div>
         <div class="outershell2">
@@ -60,16 +60,16 @@
               <p class="line">If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
               <p class="number">phone <strong>+1(408)667-8688</strong></p>
               <p class="email">Email <strong>frankh0820@gmail.com</strong></p>
-        <footer>
-          <ul class="main-footer clearfix">
-              <li class="left"><h2>Frank Hsu</h2></li>
-                <div class="right">
-                  <li><h2><a href="#">Home</a></h2></li>
-                  <li><h2><a href="#">Portfolio</a></h2></li>
-                  <li><h2><a href="#">Contact</a></h2></li>
-                </div>
-          </ul>
-	     </footer>
+        <footer class="main-footer clearfix">
+          <div class="left">
+            <h2>Frank Hsu</h2>
+          </div>
+          <div class="right">
+            <a href="#"><h2>Home</h2></a>
+            <a href="#"><h2>Portfolio</h2></a>
+            <a href="#"><h2>Contact</h2></a>
+          </div>
+       </footer>
       </div>
   </body>
 </html>
