--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
       <header class="main-header">
-        <div class="outershell1 clearfix">
+        <div class="opening clearfix">
           <h1 class="name">Frank Hsu</h1>
           <ul class="main-nav clearfix">
             <li><a href="#">Home</a></li>
@@ -20,7 +20,7 @@
           </p>
         </div>
       </header>
-        <div class="innershell clearfix">
+        <div class="section clearfix">
           <h2>Portfolio</h2>
           <ul class="nav2">
             <li>
@@ -55,7 +55,7 @@
             </li>
           </ul>
         </div>
-        <div class="outershell2">
+        <div class="end">
               <h2 class="contact">Contact</h2>
               <p class="line">If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
               <p class="number">phone <strong>+1(408)667-8688</strong></p>
